manifests/catalog/wireguard/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wg
  namespace: wireguard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wg-easy
  template:
    metadata:
      labels:
        app: wg-easy
    spec:
      containers:
      - name: wg-easy
        image: ghcr.io/wg-easy/wg-easy
        ports:
          - containerPort: 51818
            protocol: UDP
          - containerPort: 51821
            protocol: TCP
        volumeMounts:
          - name: config
            mountPath: /etc/wireguard
        securityContext:
          capabilities:
            add: ["NET_ADMIN", "SYS_MODULE"]
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: wg-config
