manifests/catalog/wireguard/base/tcp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wg-web
  namespace: wireguard
spec:
  type: ClusterIP
  selector:
    app: wg
  ports:
    - name: web
      port: 51821
      targetPort: 51821
      protocol: TCP
