manifests/catalog/wireguard/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wg-web-admin
  namespace: wireguard
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - wg.manabo.org
      secretName: wireguard-wildcard-tls
  rules:
    - host: wg.manabo.org
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: wg-web
              port:
                number: 51821
